# lenet-5

./: .gitignore  README.md  pyproject.toml
lenet_5/: network.py  networks.py  train.py
tests/: test_lenet5.py
