[tool.poetry]
name = "lenet-5"
version = "0.1.0"
description = ""
authors = ["Hugh Cunningham <hugh.e.cunningham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
numpy = "^1.19.1"
torchvision = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
